<resources>

    <string name="app_name">HelpMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IBCorp Helpme</string>
    <string name="nav_header_subtitle">ibcorphelpme@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Experts Dial</string>
    <string name="menu_gallery">Resources</string>
    <string name="menu_slideshow">Inbox</string>
    <string name="menu_tuition">Queries</string>
    <string name="menu_quiz">Games</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_improve">Improve us</string>
    <string name="menu_news">News</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Help Me</string>
    <string name="slide_1_desc">The easiest way to find help from your expert!</string>

    <string name="slide_2_title">COVID 19 World</string>
    <string name="slide_2_desc">Book tuition slot for your family and friends!</string>

    <string name="slide_3_title">Explore more in MemberShip</string>
    <string name="slide_3_desc">More attractive feature for users in premium account</string>

    <string name="slide_4_title">Think More Explore More</string>
    <string name="slide_4_desc">Deep dive into world of Knowledge</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_login">ca-app-pub-2205239074559548/5778761517</string>
    <string name="ad_mob_id">ca-app-pub-2205239074559548~5096251142</string>

    <string name="facebook_app_id">1086828055109073</string>
    <string name="fb_login_protocol_scheme">fb1086828055109073</string>
    <string name="check_your_internet_connection">Check your internet connection.</string>


    <string-array name="domain">
        <item>Technology</item>
        <item>Management</item>
        <item>UPSC</item>
        <item>Arts and Craft</item>
        <item>Jobs</item>
        <item>Others</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_Android">Android expert have 7+ years of experience in corporate world.</string>
    <string name="text_managment">Management expert have 10+ years of experience in corporate world.</string>
    <string name="text_civil">Civil services exam expert have almost 8+ years of experience in coaching environment.</string>
    <string name="text_arts">Arts and Craft expert have 12+ years of experience in art design environment.</string>
    <string name="text_app_expert">App Expert Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Your Queries Solution is here.</string>
    <string name="msg_token_fmt">Firebase Token</string>
    <string name="document_upload">Document Upload</string>
    <string name="queries">Queries</string>
    <string name="enter_the_description">Enter the Description</string>
    <string name="enter_the_topic">Enter the topic</string>
    <string name="url">URL</string>
    <string name="provide_your_feedback_to_improve_us">Provide your feedback to improve us</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="area_of_interest">Area of Interest</string>
</resources>