<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_expert"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_lecture"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_tuition"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_tuition" />

        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_baseline_quiz_24"
            android:title="@string/menu_quiz" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox_24"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_improve"
            android:icon="@drawable/ic_baseline_rate_review_24"
            android:title="@string/menu_improve" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24px"
            android:title="@string/menu_logout" />
    </group>
</menu>