<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ibcorp.helpmeapp.Fragments.UserFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ibcorp.helpmeapp.ui.gallery.DomainFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tuition"
        android:name="com.ibcorp.helpmeapp.ui.slideshow.TutionFragment"
        android:label="@string/menu_tuition"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.ibcorp.helpmeapp.Fragments.InboxFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/nav_improve"
        android:name="com.ibcorp.helpmeapp.Fragments.ImproveUsFragment"
        android:label="@string/menu_improve"
        tools:layout="@layout/fragment_improve_us" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.ibcorp.helpmeapp.Fragments.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/nav_quiz"
        android:name="com.ibcorp.helpmeapp.Fragments.QuizFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_quiz" />
</navigation>