<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.UserFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:text="@string/text_app_expert" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:textColor="@color/textColor"
        android:text="@string/text_Android" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textColor"
        android:paddingTop="20dp"
        android:text="@string/text_managment" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textColor"
        android:paddingTop="20dp"
        android:text="@string/text_civil" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textColor"
        android:paddingTop="20dp"
        android:text="@string/text_arts" />

</LinearLayout>